--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
    <div id="bodyblur">
 
-     <!-- Wallpaper --><img src="https://hdiiofficial.github.io/iniibuatayang/ayang.jpeg" id="wallpaper"/>
+     <!-- Wallpaper --><img src="https://raw.githubusercontent.com/hdiiofficial/iniibuatayang/main/IMG-20240616-WA0037.jpg" id="wallpaper"/>
 
    </div>
 
