--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <head>
 
-<title>Ini buat ayang aku</title>
+<title>Ini buat kmu</title>
 
 <link rel="icon" type="image/x-icon" href="https://malasid.github.io/favicon.png">
 
@@ -68,7 +68,7 @@
 
    <div id="bodyblur">
 
-     <!-- Wallpaper --><img src="https://raw.githubusercontent.com/hdiiofficial/iniibuatayang/main/IMG-20240616-WA0037.jpg" id="wallpaper"/>
+     <!-- Wallpaper --><img src="https://raw.githubusercontent.com/hdiiofficial/iniibuatayang/main/IMG-20241027-WA0008.jpg" id="wallpaper"/>
 
    </div>
 
@@ -132,7 +132,7 @@
 
         <p><b>
 
-	        <span>awoo citra sayang</span>
+	        <span>awoo octaaaaa</span>
 
         </b></p>
 
@@ -140,7 +140,7 @@
 
         <p><b>
 
-	        <span>maaf yaa kalo aku<br>suka bkin kamu badmood</span>
+	        <span>udahh yaaa<br>jangan badmood</span>
 
         </b></p>
 
@@ -172,8 +172,7 @@
 
      <div><blockquote id='bq'>
 
-       <p id="kalimat">maaf ya aku belum bisa jadi yang terbaik buat kamu,<br><br>aku juga gabisa sepenuhnya ngertiin gimana cara kamu ingin dicintai,<br><br>aku terlalu banyak kurangnya buat cewe secantik kamu,<br><br>tapi aku akan terus berusaha yang terbaik buat kamu hehe..</p>
-
+       <p id="kalimat">nanti klo badmood gajadi beli eskrimm..</p>
        <p id="pesanAkhir">stay with me. i love uu 🤍</p>
 
      </blockquote></div>
