--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
      <div><blockquote id='bq'>
 
        <p id="kalimat">nanti klo badmood gajadi beli eskrimm..</p>
-       <p id="pesanAkhir">stay with me. i love uu 🤍</p>
+       <p id="pesanAkhir">wleeeeeeeee....</p>
 
      </blockquote></div>
 
